# QtCalculator

./: CMakeLists.txt  Main.qml  main.cpp  sumlogic.cpp  sumlogic.h
